<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow>
                <TextView android:text="@string/site"/>
                <EditText
                    android:hint="@string/site_hint"
                    android:inputType="textUri"
                    android:autofillHints="site"
                    android:id="@+id/siteText" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/username"/>
                <EditText
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:autofillHints="username"
                    android:id="@+id/usernameText" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/password"/>
                <EditText
                    android:hint="@string/password_hint"
                    android:inputType="textVisiblePassword"
                    android:autofillHints="password"
                    android:id="@+id/passwordText" />
            </TableRow>
        </TableLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_password"
            android:onClick="generatePassword" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_login"
            android:onClick="addLogin" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>